Fixes various Mars theme colors for legibility: - BBCode and gender colors in highlights - Conversation list items

--- a/scss/themes/chat/mars.scss
+++ b/scss/themes/chat/mars.scss
@@ -12,7 +12,7 @@ $blue-color: $mars-blue;
 $yellow-color: $mars-yellow;
 $purple-color: $mars-purple;
 $cyan-color: $mars-cyan;
-$white-color: $gray-800;
+$white-color: $black;
 $black-color: #554c86;
 $brown-color: $mars-brown;
 $pink-color: $mars-pink;
@@ -37,12 +37,29 @@ body,
 }
 
 .message-own:not(.message-warn) {
-  background-color: rgba($gray-200, 0.3);
+  background-color: rgba($gray-200, 0.75);
 }
 
-.list-group-item-danger {
-  color: theme-color-level('danger', -9);
-  background-color: theme-color-level('danger', -7);
+.list-group-item-action.list-group-item-danger {
+  --bs-danger-bg-subtle: var(--bs-danger-border-subtle);
+  --bs-list-group-color: var(--bs-danger-text-emphasis);
+
+  &:hover {
+    background-color: color-mix(in srgb, var(--bs-danger-bg-subtle) 90%, black);
+  }
+}
+
+.list-group-item-action.list-group-item-warning {
+  --bs-warning-bg-subtle: var(--bs-warning-border-subtle);
+  --bs-warning-list-group-color: var(--bs-warning-text-emphasis);
+
+  &:hover {
+    background-color: color-mix(
+      in srgb,
+      var(--bs-warning-bg-subtle) 90%,
+      black
+    );
+  }
 }
 
 * {
@@ -100,6 +117,61 @@ $genders: (
 
   .message-event .gender-#{$gender} {
     color: color.scale($color, $lightness: 5%);
+  }
+}
+
+//Message type overrides (for bad gender/ bbcode color contrasts)
+
+.message-highlight {
+  .blackText,
+  .blackNameText,
+  .gender-none {
+    color: #c0bae3;
+  }
+  .redText,
+  .redNameText {
+    color: #f37f74;
+  }
+  .gender-cunt-boy,
+  .greenText,
+  .greenNameText {
+    color: #76f74d;
+  }
+}
+
+.message-warn {
+  .gender-female,
+  .pinkText,
+  .pinkNameText {
+    color: #8e1137;
+  }
+
+  .gender-male,
+  .blueText,
+  .blueNameText {
+    color: #0b497d;
+  }
+
+  .grayText,
+  .grayNametext {
+    color: #505054;
+  }
+
+  .yellowText,
+  .yellowNameText {
+    color: #756007;
+  }
+
+  .gender-transgender,
+  .orangeText,
+  .orangeNameText {
+    color: #63410b;
+  }
+
+  .gender-male-herm,
+  .cyanText,
+  .cyanNameText {
+    color: #0e4b44;
   }
 }
 
